NEWS - OpenPrinting CUPS Filters v1.13.4 - 2017-02-17
-----------------------------------------------------

CHANGES IN V1.13.5

	- braille: Added support for text margins.
	- cups-browsed: When creating a local queue for a remote CUPS
	  printer, add the line '*APRemoteQueueID: ""' to the PPD file
	  so that CUPS sets the CUPS_PRINTER_REMOTE bit for the
	  printer type of the local queue (Bug #1386).

CHANGES IN V1.13.4

	- libcupsfilters: Let PPD generator for driverless printing
	  not error out when there is no urf-supported or
	  pwg-raster-document-resolution-supported IPP attribute,
	  simply accept the default resolution also from the
	  printer-resolution-default attribute or set a default value
	  of 300 dpi to get a working PPD file.
	- cups-browsed: Do not use deprecated names for IPP status
	  constants
	- cups-browsed: Corrected determination whether an IPP status
	  is an error, to avoid "Unable to create/modify CUPS queue
	  (Success)" and infinite repetition of a succeeded operation
	  (Debian bug #852436).

CHANGES IN V1.13.3

	- libcupsfilters: When auto-generating PPD files added support
	  for passing through JPEG input to printers which understand
	  JPEG. This is also done in CUPS-generated PPDs (Debian bug
	  #851499).
	- libcupsfilters: Added the "output-bin" option support from
	  CUPS' PPD generator to our PPD generator (CUPS Issue #4938).
	- cups-browsed: Make support for printers with IPv6 IP address
	  work. Both link-local and regular addresses work.

CHANGES IN V1.13.2

	- cupsfilters.drv: Corrected cupsFilter entry for the "Generic
	  IPP Everywhere Printer".
	- driverless: Fixes on the man page (Debian bug #849075).
	- driverless: Do not error-exit (non-zero status) when run by
	  CUPS as backend or PPD generator when no driverless printer
	  is found or Avahi not running. When run from thr command
	  line, exit status is the same as of ippfind.
	- imagetoraster: Removed (incomplete) PWG Raster support. For